multi player mod

--- a/frontend/game/index.html
+++ b/frontend/game/index.html
@@ -32,7 +32,8 @@
         blast radius!</p>
       <p><strong>Goal</strong>: Destroy blocks, collect power-ups, avoid explosions, and find the exit to advance to the
         next level.</p>
-      <button id="start-btn" class="start-btn" onclick="startGame()" aria-label="Start game">START GAME</button>
+      <button id="start-btn" class="start-btn" aria-label="Start game">START GAME</button>
+      <button id="multiplayer-btn" class="start-btn" aria-label="Join multiplayer game" style="margin-top: 1rem;">MULTIPLAYER</button>
     </div>
   </div>
 
