integring the dom

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,9 @@
       <p><strong>Goal</strong>: Destroy blocks, collect power-ups, avoid explosions, and find the exit to advance to the
         next level.</p>
       <div class="menu-buttons">
+        <input type="text" id="nickname-input" placeholder="Enter your nickname" maxlength="20" style="padding: 10px; margin-bottom: 10px; border-radius: 5px; border: 2px solid #ff4757; background: rgba(0,0,0,0.8); color: white; font-family: 'Press Start 2P'; font-size: 12px;">
         <button id="start-btn" class="start-btn" aria-label="Start game">START GAME</button>
+        <button id="chat-btn" class="start-btn" style="background: #28a745;">CHAT</button>
         <a href="/settings" class="menu-link">Settings</a>
         <a href="/lobby" class="menu-link">Multiplayer</a>
       </div>
