--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,15 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <base href="/game/" />
   <title>BomberMan</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="icon/favicon.png" type="image/svg+xml" />
+  <link rel="stylesheet" href="/game/style.css" />
+  <link rel="icon" href="/game/icon/favicon.png" type="image/svg+xml" />
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="/game/main.js"></script>
 </body>
 
 </html>
