--- a/frontend/multiplayer/index.html
+++ b/frontend/multiplayer/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberman Multiplayer</title>
     <link rel="stylesheet" href="../game/style.css">
+    <link rel="icon" href="../game/icon/favicon.png" type="image/svg+xml" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <script type="module" src="main.js"></script>
