--- a/frontend/solo/index.html
+++ b/frontend/solo/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bomberman Solo</title>
+    <title>Bomberman - Solo Mode</title>
     <link rel="stylesheet" href="../game/style.css">
+    <link rel="icon" href="../game/icon/favicon.png" type="image/svg+xml" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Solo game will be initialized by main.js -->
     <script type="module" src="main.js"></script>
 </body>
 </html>
