--- a/frontend/test-network.html
+++ b/frontend/test-network.html
@@ -158,7 +158,7 @@
     </div>
 
     <script type="module">
-        import { NetworkManager } from './network/NetworkManager.js';
+        import { NetworkManager } from './game/network/NetworkManager.js';
 
         const log = document.getElementById('log');
         const statusIndicator = document.getElementById('status-indicator');
