--- a/frontend/solo/index.html
+++ b/frontend/solo/index.html
@@ -40,13 +40,13 @@
 
   <div class="Controls">
     <button id="star_pause">
-      <img id="icon" src="./icon/play.svg" alt="star" width="16" height="16"> </img>
+      <img id="play-icon" src="./icon/play.svg" alt="star" width="16" height="16"> </img>
     </button>
     <button id="ref">
-      <img id="icon" src="./icon/rotate-ccw.svg" alt="star" width="16" height="16"> </img>
+      <img id="rotate-icon" src="./icon/rotate-ccw.svg" alt="star" width="16" height="16"> </img>
     </button>
     <button id='sound'>
-      <img id="Icon" src="./icon/volume-2.svg" alt="voice" , width="16" height="16"> </img>
+      <img id="volume-icon" src="./icon/volume-2.svg" alt="voice" , width="16" height="16"> </img>
     </button>
   </div>
   <script type="module" src="main.js"></script>
