saving before making each player have it's own state

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,7 +199,7 @@
     <p class="home-subtitle">Choose Your Game Mode</p>
     <div class="home-buttons">
       <a href="/solo/index.html" class="home-btn">SOLO PLAY</a>
-      <a href="/multiplayer/index.html" class="home-btn">MULTIPLAYER</a>
+      <a href="/online/index.html" class="home-btn">MULTIPLAYER</a>
     </div>
   </div>
 </body>
