saving the state befor editing core

--- a/frontend/online/index.html
+++ b/frontend/online/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="Controls">
+  <!-- <div class="Controls">
     <button id="star_pause">
       <img id="play-icon" src="./icon/play.svg" alt="star" width="16" height="16"> </img>
     </button>
@@ -22,7 +22,7 @@
     <button id='sound'>
       <img id="volume-icon" src="./icon/volume-2.svg" alt="voice" , width="16" height="16"> </img>
     </button>
-  </div>
+  </div> -->
   <script type="module" src="main.js"></script>
 </body>
 
