--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Courier New', monospace;
+            background: #000;
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -30,17 +30,49 @@
 
         /* Home Page Styles */
         .home-page {
-            background: white;
-            border-radius: 20px;
+            background: linear-gradient(45deg, #000 0%, #330000 50%, #000 100%);
+            border: 4px solid #ff0000;
+            border-radius: 0;
             padding: 60px 40px;
             text-align: center;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 30px #ff0000, inset 0 0 20px rgba(255,0,0,0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .home-page::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: repeating-linear-gradient(
+                0deg,
+                transparent,
+                transparent 2px,
+                rgba(255,0,0,0.1) 2px,
+                rgba(255,0,0,0.1) 4px
+            );
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .home-page > * {
+            position: relative;
+            z-index: 2;
         }
 
         .home-page h1 {
-            font-size: clamp(32px, 5vw, 48px);
-            color: #333;
+            font-size: clamp(32px, 6vw, 56px);
+            color: #ff0000;
             margin-bottom: 40px;
+            text-shadow: 0 0 15px #ff0000, 0 0 30px #ff0000;
+            animation: glow 2s ease-in-out infinite alternate;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            font-family: 'Courier New', monospace;
         }
 
         .nickname-form {
@@ -53,25 +85,49 @@
 
         .input {
             padding: 15px 20px;
-            font-size: 16px;
-            border: 2px solid #ddd;
-            border-radius: 10px;
+            font-size: 18px;
+            border: 3px solid #ff0000;
+            border-radius: 0;
             width: 100%;
+            background: #000;
+            color: #ff0000;
+            font-family: 'Courier New', monospace;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            box-shadow: 0 0 15px rgba(255,0,0,0.3), inset 0 0 10px rgba(255,0,0,0.1);
+        }
+
+        .input::placeholder {
+            color: #660000;
+            text-transform: uppercase;
+        }
+
+        .input:focus {
+            outline: none;
+            box-shadow: 0 0 25px rgba(255,0,0,0.6), inset 0 0 15px rgba(255,0,0,0.2);
+            text-shadow: 0 0 5px #ff0000;
         }
 
         .btn {
-            padding: 15px 30px;
-            font-size: 18px;
-            color: white;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border: none;
-            border-radius: 10px;
+            padding: 18px 30px;
+            font-size: 20px;
+            color: #000;
+            background: linear-gradient(45deg, #ff0000, #cc0000);
+            border: 3px solid #fff;
+            border-radius: 0;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: all 0.2s;
+            font-family: 'Courier New', monospace;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            box-shadow: 0 0 15px rgba(255,0,0,0.5);
         }
 
         .btn:hover {
             transform: translateY(-2px);
+            box-shadow: 0 0 25px rgba(255,0,0,0.8);
+            text-shadow: 0 0 5px #000;
         }
 
         /* Lobby Page Styles */
@@ -346,6 +402,23 @@
             0% { transform: scale(1); opacity: 1; }
             50% { transform: scale(1.15); opacity: 0.85; }
             100% { transform: scale(1); opacity: 1; }
+        }
+
+        @keyframes glow {
+            0% { text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000; }
+            100% { text-shadow: 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 40px #ff0000; }
+        }
+
+        @keyframes playerPulse {
+            0% { box-shadow: 0 0 10px rgba(255,0,0,0.5); }
+            50% { box-shadow: 0 0 20px rgba(255,0,0,0.8); }
+            100% { box-shadow: 0 0 10px rgba(255,0,0,0.5); }
+        }
+
+        @keyframes countdownBlink {
+            0% { opacity: 1; }
+            50% { opacity: 0.7; }
+            100% { opacity: 1; }
         }
 
         /* Mobile Responsive */
