--- a/frontend/solo/index.html
+++ b/frontend/solo/index.html
@@ -40,13 +40,13 @@
 
   <div class="Controls">
     <button id="star_pause">
-      <img id="play-icon" src="./icon/play.svg" alt="star" width="16" height="16"> </img>
+      <span id="play-icon" style="font-size: 20px;">▶️</span>
     </button>
     <button id="ref">
-      <img id="rotate-icon" src="./icon/rotate-ccw.svg" alt="star" width="16" height="16"> </img>
+      <span id="rotate-icon" style="font-size: 20px;">🔄</span>
     </button>
     <button id='sound'>
-      <img id="volume-icon" src="./icon/volume-2.svg" alt="voice" , width="16" height="16"> </img>
+      <span id="volume-icon" style="font-size: 20px;">🔊</span>
     </button>
   </div>
   <script type="module" src="main.js"></script>
