solo mode back home

--- a/frontend/solo/index.html
+++ b/frontend/solo/index.html
@@ -48,6 +48,9 @@
     <button id='sound'>
       <span id="volume-icon" style="font-size: 20px;">🔊</span>
     </button>
+    <button id='back-home' onclick="window.location.href='../index.html'">
+      <span style="font-size: 20px;">🏠</span>
+    </button>
   </div>
   <script type="module" src="main.js"></script>
 </body>
