--- a/frontend/solo/index.html
+++ b/frontend/solo/index.html
@@ -49,7 +49,7 @@
       <span id="volume-icon" style="font-size: 20px;">🔊</span>
     </button>
     <button id='back-home' onclick="window.location.href='../index.html'">
-      <span style="font-size: 20px;">🏠</span>
+      <span style="font-size: 20px;">HOME</span>
     </button>
   </div>
   <script type="module" src="main.js"></script>
